--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,12 +46,12 @@ services:
     restart: unless-stopped
     networks:
       - web_testing_network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:7861/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:7861/"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 40s
 
   
   pgadmin:
